# can-cube-sat-2021

construction/: gcs_enkoder-kron.stl
construction/3Dmodel_Spacecraft/: adapter.prt.1  air-research-payload.asm.1  air-valve.prt.1  ark-pcb.prt.1  ark.asm.1  balka_kreplenia.prt.1  barometr-ms5611.prt.1  battery_pcb-bms.prt.1  bku-pcb.prt.1  bku.asm.1  bme280_module.prt.1  board-bms.prt.1  board_ark.asm.1  bottom-camera-kron.prt.1  bsk1-pcb-main.prt.1  bsk1.asm.1  bsk2-pcb-main.prt.1  bsk2.asm.1  bsk3-pcb-main.prt.1  bsk3.asm.1  bsk4-pcb-main.prt.1  bsk4.asm.1  bsk5.asm.1  bsk5_pcb-main.prt.1  bsk_inter-plata.prt.1  bsk_inter-plata_for_bsk5.prt.1  bsk_pcb-cross.prt.1  bsk_pcb-cross_for_bsk5.prt.1  cam.prt.1  cancubesat-2.asm.1  cancubesat-2.drw.1  cancubesat-2gch.drw.1  cancubesat-2sb.drw.1  connector-ffc_686115148922.prt.1  connector-pbs-6r.prt.1  connector-pbs-8r.prt.1  connector-pls-11.prt.1  connector-pls-14.prt.1  connector-pls-8.prt.1  connector_usb-type-c.prt.1  (+95 more)
construction/Assistive_models/: solar_pcb-outer.drw.1  solar_pcb-outer.drw.2  solar_pcb-outer.prt.1  solar_pcb-outer.prt.2
construction/CanCubeSat-for-GKS/: cancubesat-2-for-gks.prt.1
construction/Drawings/: payload-pcb.drw.1
construction/Equipment/: sun-sensor-shtanga-eqv.prt.1
construction/STLs/: bottom-camera-kron.stl  bsk_equipment.stl  bsk_inter-plata.stl  crepej_reductora.gcode  crepej_reductora.stl  fixator-cancubesat-2.stl  gcs_enkoder-kron.stl  gcs_gear-base-test.stl  gcs_gear-top-small.stl  karkas_balka-1.gcode  karkas_balka-1.stl  karkas_rama-1.gcode  karkas_rama-1.stl  karkas_rama-2.gcode  karkas_rama-2.stl  krepej_anteni_gps-v2.stl  kron-of-board.gcode  kron-of-board.stl  mechanizacia_security.gcode  mechanizacia_security.stl  module-ab_2s2p_korpus-bottom.gcode  module-ab_2s2p_korpus-bottom.stl  module-ab_2s2p_korpus-top.stl  opora-cancubesat-2.stl  solar-prostavka.stl  solar_inter-plata-equip.stl  solar_inter-plata.stl  solar_kron-equip.stl  solar_kron-mirror.stl  solar_kron-v2-mirr.stl  solar_kron-v2.stl  solar_kron.stl  sun-sensor-kron.stl  sun-sensor-shtanga-mirror.stl  sun-sensor-shtanga.stl  top-camera-kron.stl
doc/: 1w-catalogue-stand.txt  TR-WHOLE-THING.odt  bsk5_pcb.drw.1  bsk5_pcb.drw.2  topics.md  ТЗ-НКУ.odt  Техническое задание на ДКА Мандаринка.docx  Техническое задание на ДКА Мандаринка.odt
logs2021/: make_database.py
logs2021/RADIO/: extract-everything.sh  its-broker-log-20211004T154432.zmq-log  its-broker-log-20211004T155515.zmq-log  its-broker-log-20211004T155629.zmq-log
logs2021/ascent/: make_database_ascent.py
schematics/Gerber/: BKU.cam  Concern-ITS_AB+DC-DC_v2.0.rar  Concern-ITS_AB+RADIO_v2.0.rar  Concern-ITS_AB_v2.0.rar  Concern-ITS_BKU_v2.0.rar  Concern-ITS_BSK1+BSK3+PL_v2.0.rar  Concern-ITS_BSK1+BSK3_v2.0.rar  Concern-ITS_BSK2+ARK_v2.0.rar  Concern-ITS_BSK2+BSK4_v2.0.rar  Concern-ITS_DC-DC_v2.0.rar  Concern-ITS_DEBUG_v2.0.rar  Concern-ITS_PL_v2.0.rar  Concern-ITS_SP+SPIDER_v2.0.rar  Concerrn-ITS_AB_v2.0.rar  Gerber.cam  WSPR_v1.0.rar  drill_1_16.xln
schematics/board/: AB+DC-DC.brd  AB+RADIO.brd  AB+RADIO.sch  AB.brd  AB.sch  ARK.brd  ARK.sch  ARKnew.brd  ARKnew.sch  BKU.brd  BKU.sch  BMSnew.brd  BMSnew.sch  BSK1+BSK3+PL.brd  BSK1+BSK3.brd  BSK1.brd  BSK1.sch  BSK2+BSK4.brd  BSK2.brd  BSK2.sch  BSK3.brd  BSK3.sch  BSK4.brd  BSK4.sch  BSK4new.brd  BSK4new.sch  BSK5+ARK.brd  BSK5.brd  BSK5.sch  CROSS.brd  (+32 more)
src/: .gitignore
src/common/ccsds/uslp-cpp/: CMakeLists.txt
src/common/ccsds/uslp-cpp/include/: bytes_printer.hpp  lorem_ipsum.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/: events.hpp  exceptions.hpp  input_stack.hpp  operation_control_field.hpp  output_stack.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/_detail/: tf_header.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/common/: ids.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/map/: abstract_map.hpp  map_access_sink.hpp  map_access_source.hpp  map_packet_sink.hpp  map_packet_source.hpp  map_sink_events.h
src/common/ccsds/uslp-cpp/include/ccsds/uslp/master/: abstract_mchannel.hpp  vchannel_rr_muxer.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/physical/: abstract_pchannel.hpp
src/common/ccsds/uslp-cpp/include/ccsds/uslp/virtual/: abstract_vchannel.hpp  map_demuxer.hpp
src/common/ccsds/uslp-cpp/src/uslp/: idle_pattern.cpp  input_stack.cpp  output_stack.cpp
src/common/ccsds/uslp-cpp/src/uslp/common/: frame_seq_no.cpp
src/common/ccsds/uslp-cpp/src/uslp/map/: abstract_map.cpp  map_access_sink.cpp  map_access_source.cpp  map_packet_sink.cpp
src/common/ccsds/uslp-cpp/src/uslp/master/: abstract_mchannel.cpp  vchannel_demuxer.cpp  vchannel_rr_muxer.cpp
src/common/ccsds/uslp-cpp/src/uslp/physical/: abstract_pchannel.cpp  mchannel_demuxer.cpp
src/common/ccsds/uslp-cpp/src/uslp/virtual/: abstract_vchannel.cpp  map_demuxer.cpp  map_rr_muxer.cpp
src/ground/rpi/ccsds-link/server-radio/: CMakeLists.txt
src/ground/rpi/ccsds-link/server-radio/libs/jsmin/: CMakeLists.txt
src/ground/rpi/ccsds-link/server-radio/libs/log.c/: CMakeLists.txt
src/ground/rpi/ccsds-link/server-radio/libs/log.c/inc/: log.h
src/ground/rpi/ccsds-link/server-radio/libs/log.c/src/: log.c
src/ground/rpi/ccsds-link/server-radio/libs/sx126x/: CMakeLists.txt  remote
src/ground/rpi/ccsds-link/server-radio/libs/sx126x/inc/: sx126x_board_rpi.h
src/ground/rpi/ccsds-link/server-radio/libs/sx126x/src/: sx126x_board_rpi.c
src/ground/rpi/ccsds-link/server-radio/src/: main.c  network.c  network.h  radio.c  radio.h  server-config.c  server-config.h  server-zmq.c  server-zmq.h  server.c  server.h
src/ground/rpi/ccsds-link/server-uslp/: CMakeLists.txt
src/ground/rpi/ccsds-link/server-uslp/libs/ccsds-uslp-cpp/: CMakeLists.txt  remote
src/ground/rpi/ccsds-link/server-uslp/src/: event_handler.hpp  main.cpp
src/ground/rpi/ccsds-link/source/sx126x/: CMakeLists.txt  remote
src/ground/rpi/ccsds-link/source/sx126x/inc/: sx126x_board_rpi.h
src/ground/rpi/ccsds-link/source/sx126x/src/: sx126x_board_rpi.c
src/research/ccsds-uslp-cpp-dev/: CMakeLists.txt
src/research/ccsds-uslp-cpp-dev/src/: main.cpp
(+1168 files in other folders)
